--- a/Project/static/selectPokemon.html
+++ b/Project/static/selectPokemon.html
@@ -226,7 +226,7 @@
                         <div class="page-font" style="font-size: 24px; color: #0b065b;">
                             DEF:
                         </div>
-                        <div style="padding: 20px;">
+                        <div style="padding: 31px; display: inline-block;">
                             <input type="number" name="pokemon2.def" style="width: 200px;"
                                 placeholder="Insira um número...">
                         </div>
@@ -235,7 +235,7 @@
                         <div class="page-font" style="font-size: 24px; color: #0b065b;">
                             SP.DEF:
                         </div>
-                        <div style="padding: 20px;">
+                        <div style="padding: 31px; display: inline-block;">
                             <input type="number" name="pokemon2.spdef" style="width: 200px;"
                                 placeholder="Insira um número...">
                         </div>
@@ -244,7 +244,7 @@
                         <div class="page-font" style="font-size: 24px; color: #0b065b;">
                             Wonder Guard:
                         </div>
-                        <div class="page-font" style="padding: 20px; color: #0b065b;">
+                        <div class="page-font" style="padding: 31px; color: #0b065b;">
                             <input type="checkbox" id="scales" name="pokemon2.wonderGuard"
                                 style=" transform: scale(1.5);">
                             <label for="">Sim</label>
